Bug 1814553 - Make sure to always send AVIF decoder error telemetry. r=tnikkel

This fixes an assertion failure due to the assumption before Bug 1682662 that
all metadata decodes will completely decode a sample. That is no longer the case
because telemetry for image sizes can be sent without a full decode.

Differential Revision: https://phabricator.services.mozilla.com/D168645